[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Blindspot-owv2A.otf" type="DynamicFontData" id=1]
[ext_resource path="res://menus/OptionsMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 1 )

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -139.0
margin_top = 75.0
margin_right = 139.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
uppercase = true

[node name="Back" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -77.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
text = " X "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Replacer" type="CheckBox" parent="."]
margin_left = 100.0
margin_top = 250.0
margin_right = 333.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 3 )
text = "Instead of king, use ???????"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkipIntro" type="CheckBox" parent="."]
margin_left = 100.0
margin_top = 300.0
margin_right = 143.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 4 )
text = "Skip Intro"

[node name="ClearScore" type="Button" parent="."]
margin_left = 100.0
margin_top = 350.0
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 5 )
text = " Clear Hi Score "
align = 0

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="toggled" from="Replacer" to="." method="_on_Replacer_toggled"]
[connection signal="toggled" from="SkipIntro" to="." method="_on_SkipIntro_toggled"]
[connection signal="pressed" from="ClearScore" to="." method="_on_ClearScore_pressed"]
